[build-system]
requires = ["hatchling", "pyproj"]
build-backend = "hatchling.build"

[project]
name = "coordinate_converter_karel"
version = "0.0.2"
authors = [
  { name="karelonsurnud", email="dontwritetome@gmail.com" },
]
description = "A converter for WGS84 and L-Est97"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/karelonsurnud/karelonsurnudconverter"
"Bug Tracker" = "https://github.com/karelonsurnud/karelonsurnudconverter/issues"